# aurora_ndi_ros2_driver

./: CMakeLists.txt  Dockerfile  NOISE_CALIBRATION.md  README.md  docker-compose.yml  entrypoint.sh
aurora_ndi_ros2_driver/: README.md  package.xml
aurora_ndi_ros2_driver/config/analysis/: delay_analyzer_config.yaml
aurora_ndi_ros2_driver/config/driver/: kalman_filter_config.yaml
aurora_ndi_ros2_driver/include/aurora_ndi_ros2_driver/core/: aurora_protocol.hpp  aurora_serial_interface.hpp
aurora_ndi_ros2_driver/include/aurora_ndi_ros2_driver/filters/: aurora_data_filter.hpp
aurora_ndi_ros2_driver/include/aurora_ndi_ros2_driver/nodes/analysis/: noise_estimator_node.hpp
aurora_ndi_ros2_driver/include/aurora_ndi_ros2_driver/nodes/driver/: aurora_publisher_node.hpp
aurora_ndi_ros2_driver/launch/driver/: aurora_tracking.launch.py
aurora_ndi_ros2_driver/msg/: AuroraData.msg
aurora_ndi_ros2_driver/src/core/: aurora_protocol.cpp  ndi_aurora_ros2.cpp
aurora_ndi_ros2_driver/src/filters/: kalman_filter_node.cpp
aurora_ndi_ros2_driver/src/nodes/analysis/: noise_estimator_node.cpp
aurora_ndi_ros2_driver/src/nodes/driver/: aurora_publisher_node.cpp
config/: aurora_config.yaml  noise_estimator_config.yaml
config/analysis/: noise_estimator_config.yaml
config/driver/: aurora_tracking_config.yaml  lowpass_filter_config.yaml
include/aurora_ndi_ros2_driver/: aurora_publisher_node.hpp  aurora_utils.hpp  ndi_aurora_ros2.hpp
include/aurora_ndi_ros2_driver/core/: aurora_message_parser.hpp  ndi_aurora_ros2.hpp
include/aurora_ndi_ros2_driver/filters/: kalman_filter_node.hpp  lowpass_filter_node.hpp
include/aurora_ndi_ros2_driver/nodes/analysis/: delay_analyzer_node.hpp
include/aurora_ndi_ros2_driver/utils/: aurora_utils.hpp
launch/: aurora_noise_calibration.launch.py  aurora_pub.launch.py
launch/analysis/: aurora_noise_calibration.launch.py  delay_analyzer.launch.py
msg/: AuroraData.msg
resources/aurora_ndi_ros2_driver/config/: aurora_config.yaml
resources/aurora_ndi_ros2_driver/include/aurora_ndi_ros2_driver/: aurora_utils.hpp  ndi_aurora_ros2.hpp
resources/aurora_ndi_ros2_driver/src/: aurora_publisher_node.cpp  ndi_aurora_ros2.cpp
resources/aurora_pub/: CMakeLists.txt  package.xml
resources/aurora_pub/config/: aurora_config.yaml
resources/aurora_pub/include/aurora_pub/: aurora_publisher_node.hpp  aurora_utils.hpp  ndi_aurora_ros2.hpp
resources/aurora_pub/launch/: aurora_pub.launch.py
resources/aurora_pub/src/: aurora_publisher_node.cpp  aurora_utils.cpp  ndi_aurora_ros2.cpp
rom/610029_AuroraMini6DOF_1.8x9mm/: 610029-6DOF.rom
src/: aurora_publisher_node.cpp  aurora_utils.cpp  ndi_aurora_ros2.cpp  noise_estimator_node.cpp
src/core/: aurora_message_parser.cpp  aurora_serial_interface.cpp
src/filters/: aurora_data_filter.cpp  lowpass_filter_node.cpp
src/nodes/analysis/: delay_analyzer_node.cpp
src/utils/: aurora_utils.cpp
